[package]
name = "zigbee_hello_world"
version = "0.1.0"
authors = ["Frans-Willem Hardijzer <fw@hardijzer.nl>"]
edition = "2018"

[dependencies]
tokio-serial = "3.2"
tokio = "0.1"
bytes = "0.4"
futures-preview = {version = "0.3.0-alpha.15", features=["compat"]}
bitfield = "0.13"
enum-tryfrom = "0.2"
enum-tryfrom-derive = "0.2"
bimap = "0.3"
aes = "0.3.2"
block-modes = "0.3.3"
crypto-mac = "0.7.0"
block-cipher-trait = "0.6.2"
block-padding = "0.1.4"
generic-array = "0.12.0"
ctr = "0.3.2"
stream-cipher = "0.3.0"
aead = "0.1.1"
subtle = "1.0.0"
hmac = "0.7.1"
digest = "0.8.1"
nom = "5"
