[package]
name = "zigbee_hello_world"
version = "0.1.0"
authors = ["Frans-Willem Hardijzer <fw@hardijzer.nl>"]
edition = "2018"

[dependencies]
futures = "0.3"
async-std = "1.8"
pin-project = "1"
nom = "5"
cookie-factory = "0.3"
serialport = "4.0"
enum-tryfrom = "0.2"
enum-tryfrom-derive = "0.2"
snowflake = "1.3"
rand = "0.7"
pack-derive = { path = "./pack_derive" }
impl-trait-for-tuples = "0.1"
bitfield = "0.13"
pcap = { version = "0.7", features = ["pcap-savefile-append"] }
libc = "^0.2"
